--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.jpa.hibernate.ddl-auto=update
 #mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/datanet?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=TU_USUARIO
+spring.datasource.password=TU_PASSWORD
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
